deploy/kubernetes/service.yaml
apiVersion: v1
kind: Service

metadata:
  name: rag-application-demo1
  namespace: default
  labels:
    app.kubernetes.io/name: rag-application-demo1
    app.kubernetes.io/managed-by: backstage
    app.kubernetes.io/part-of: open-horizons

spec:
  type: ClusterIP

  ports:
    - port: 80
      targetPort: http
      protocol: TCP
      name: http

  selector:
    app.kubernetes.io/name: rag-application-demo1
