deploy/kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: rag-application-demo1
  namespace: default
  labels:
    app.kubernetes.io/name: rag-application-demo1
    app.kubernetes.io/managed-by: backstage
    app.kubernetes.io/part-of: open-horizons
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2

spec:
  ingressClassName: nginx

  rules:
    - http:
        paths:
          - path: /api/rag-application-demo1(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: rag-application-demo1
                port:
                  name: http
